# fpu_design

./: README.md  pyproject.toml  requirements.txt
fpu_verification/: __init__.py
fpu_verification/sim/: __init__.py  run_tests.py
rtl/: fpu.sv
sim/: run_tests.py
tb/: fpu_operations.py  test_fpu.py  test_fpu_comprehensive.py
tb_sv/: fpu_tb.sv
